# llamaIndex-local-rag

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  ARCHIVE_ORGANIZATION.md  AUDIT_ACTION_PLAN.md  AUDIT_IMPLEMENTATION_COMPLETE.md  AUDIT_RISK_PRIORITY_MATRIX.md  AUTONOMOUS_IMPROVEMENTS_COMPLETE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMIT_REVIEW_82de11b.md  CONTRIBUTING.md  CONVERSATION_MEMORY_COMPLETE.md  CRITICAL_FIXES.md  DEVELOPMENT.md  DOCUMENTATION_IMPROVEMENTS.md  Dockerfile  Dockerfile.base  ENVIRONMENT_VARIABLES.md  GITHUB_TOKEN_SETUP.md  HNSW_OPTIMIZATION_COMPLETE.md  INTERACTIVE_GUIDE.md  LICENSE  M1_OPTIMIZATION_COMPLETE.md  METADATA_QUICK_REF.md  MONITORING_CLEANUP_COMPLETE.md  MONITORING_COMPARISON.md  Makefile  OPERATIONS_SETUP_COMPLETE.md  PERFORMANCE_FIXES_COMPLETE.md  PHASE1_RUNPOD_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PROGRESS_UPDATE.md  PROJECT_INDEX.json  Procfile  QUICK_ACTION_CARD.md  QUICK_COMMANDS.sh  (+57 more)
.claude/: README.md  mcp.json
.claude/agents/: code-refactor-maintainer.md  code-refactor.md  rag-optimizer.md  repo-organizer.md
.claude/commands/: audit-index.md  compare-chunks.md  comprehensive-audit.md  document-feature.md  optimize-rag.md  organize-repo.md  parallel-test.md  review-pr.md  run-rag.md  search-and-refactor.md  tdd-feature.md  web-ui.md
.github/workflows/: ci.yml  nightly-benchmark.yml  test-runpod.yml
.planning/: PROJECT.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
auth/: authenticator.py  config.yaml
config/: .env.example  Caddyfile  README.md  __init__.py  caddy-setup.sh  constants.py  docker-compose.minimal.yml  docker-compose.yml  pytest.ini  requirements_vllm.txt
config/monitoring/: alertmanager.yml  alerts.yml  prometheus.yml
core/: __init__.py  config.py
docs/: ADVANCED_RETRIEVAL.md  AGENTS.md  ANSWER_VALIDATION.md  ARCHITECTURE_DIAGRAMS.md  AUDIT_EXECUTIVE_SUMMARY.md  AUDIT_INDEX_GUIDE.md  CHUNK_SIZE_ANALYSIS.md  CHUNK_SIZE_FIX_SUMMARY.md  CHUNK_SIZE_GUIDE.md  CHUNK_SIZE_MANAGEMENT.md  CICD_INTEGRATION.md  CODE_QUALITY_CHECKLIST.md  CONVERSATION_MEMORY_QUICKSTART.md  DEPENDENCIES.md  DEPLOYMENT_TESTS_GUIDE.md  ENVIRONMENT_VARIABLES.md  FIXES_APPLIED.md  FIX_LLAMA_CPP_CUDA.md  GPU_EMBEDDING_GUIDE.md  GRAFANA_DASHBOARDS_GUIDE.md  GRAFANA_MCP_SETUP.md  GRAPHRAG_EVOLUTION_PLAN.md  GUI_USER_GUIDE.md  HNSW_INDEX_GUIDE.md  HYDE_GUIDE.md  IMPROVEMENTS_APPLIED.md  IMPROVEMENTS_OVERVIEW.md  INDEX.md  METADATA_EXTRACTOR.md  MONITORING_GUIDE.md  OPERATIONS.md  OPERATIONS_QUICK_REFERENCE.md  PERFORMANCE.md  PERFORMANCE_ANALYSIS_REPORT.md  PERFORMANCE_OPTIMIZATIONS.md  PERFORMANCE_QUICK_START.md  PERFORMANCE_SUMMARY.md  PERFORMANCE_TRACKING.md  PHASE2_DEPLOYMENT_AUTOMATION.md  PHASE3_STREAMLIT_UI.md  (+27 more)
docs/guides/: DASHBOARD_QUICK_REFERENCE.md  DATA_INDEXING_STRATEGY.md  DEDUPLICATION_INDEX.md  DELIVERABLES.md  DIMENSION_SELECTOR_ADDED.md  FIXES_APPLIED.md  GRAFANA_BTOP_DISCREPANCY.md  GRAFANA_DASHBOARDS_IMPLEMENTATION.md  (+13 more)
eval/: test_pack_technical_docs.json
examples/: BENCHMARK_README.md  answer_validation_example.py  benchmark_example.py  conversation_memory_demo.py  hyde_example.py  integrate_metadata_extraction.py  integrate_with_rag.py  metadata_extraction_demo.py  performance_optimization_demo.py  query_routing_integration.py  rag_web_backend_integration.py  rag_with_conversation_memory.py  rag_with_validation_integration.py  sample_test_queries.json  semantic_cache_demo.py
metrics/: rag_app.prom
scripts/: README.md  atlas_embeddings.py  benchmark_embeddings.py  benchmarking_performance_analysis.py  chainlit_app.py  chat_mode_additions.py  check_dependencies.py  check_runpod_status.sh  check_tables.py  clean_instagram_json.py  clean_messenger_html.py  cleanup_empty_tables.sh  compare_both_models.sh  compare_embedding_models.py  compare_models.py  config_optimized.sh  database_apply_hnsw.sh  debug_hybrid_search.py  deploy_and_init_runpod.py  deploy_auto_runpod.py  deploy_runpod.sh  deploy_to_runpod.py  diagnose_dimension_mismatch.py  evaluate_rag.py  fix_pgvector_on_pod.sh  fix_sql_injection.py  generate_performance_dashboard.py  generate_performance_report.py  get_pod_host.py  get_pod_ssh.py  helper_quick_commands.sh  index_bge_small.sh  index_multilingual_e5.sh  init_runpod_services.sh  launch.sh  launch_minimal.sh  list_runpod_gpus.py  macos_exporter.py  manual_finish_setup.sh  monitor_live.py  (+42 more)
services/: embedding_service.py
tests/: FIXTURE_USAGE_GUIDE.md  PERFORMANCE_TESTING.md  README_PERFORMANCE_TESTS.md  README_RAG_IMPROVEMENTS_TESTS.md  __init__.py  conftest.py  diagnostic_pgvector_direct.py  diagnostic_retrieval_direct.py  performance_baselines.json  test_answer_validator.py  test_audit_index.py  test_chat_metadata.py  test_chunking.py  test_config.py  test_constants.py  test_core_config.py  test_database.py  test_database_integration.py  test_deployment_integration.py  test_e2e_pipeline.py  test_embedding.py  test_embedding_llm_integration.py  test_file_validator.py  test_fixtures.py  test_health_check.py  test_hnsw_migration.py  test_llm_config.py  test_metadata_extractor.py  test_mlx_embedding_unit.py  test_mlx_robustness.py  test_naming_utils.py  test_performance.py  test_performance_history.py  test_performance_optimizations.py  test_performance_regression.py  test_pgvector_direct.py  test_platform_detection.py  test_property_based.py  test_query_cache.py  test_query_parameters.py  (+10 more)
utils/: README.md  README_CONVERSATION_MEMORY.md  README_METADATA.md  __init__.py  answer_validator.py  conversation_memory.py  file_validator.py  health_check.py  hyde_retrieval.py  metadata_extractor.py  metrics.py  mlx_embedding.py  naming.py  parent_child_chunking.py  performance_history.py  performance_optimizations.py  platform_detection.py  prometheus_exporter.py  query_cache.py  query_expansion.py  query_router.py  rag_benchmark.py  reranker.py  runpod_db_config.py  runpod_embedding_client.py  runpod_health.py  runpod_manager.py  sentry_config.py  ssh_tunnel.py
(+50 files in other folders)
