[project]
name = "llamaindex-local-rag"
version = "1.0.0"
description = "Local RAG pipeline optimized for M1 Mac with PostgreSQL+pgvector and llama.cpp"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["rag", "llm", "llamaindex", "pgvector", "embeddings", "m1", "apple-silicon"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "llama-index>=0.14.10",
    "llama-index-core>=0.14.10",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-llms-llama-cpp>=0.5.1",
    "llama-index-vector-stores-postgres>=0.7.2",
    "llama_cpp_python>=0.3.16",
    "psycopg2-binary>=2.9.11",
    "pgvector>=0.4.2",
    "sentence-transformers>=5.2.0",
    "torch>=2.9.1",
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
    "python-dotenv>=1.2.1",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "pre-commit>=4.0.0",
    "ipython>=8.20.0",
]
mlx = [
    "mlx>=0.20.0",
    "mlx-embedding-models>=0.0.11",
]
viz = [
    "umap-learn>=0.5.4",
    "tensorboard>=2.15.0",
]
retrieval = [
    "rank-bm25>=0.2.2",
]

[project.scripts]
rag-interactive = "rag_interactive:main"
rag-web = "rag_web:main"

[project.urls]
Homepage = "https://github.com/yourusername/llamaindex-local-rag"
Repository = "https://github.com/yourusername/llamaindex-local-rag"
Issues = "https://github.com/yourusername/llamaindex-local-rag/issues"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

# Black - Code Formatting
[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | \.mypy_cache
  | \.pytest_cache
  | __pycache__
  | archive
  | query_logs
  | results
  | data
)/
'''

# Ruff - Linting & Formatting
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    ".venv",
    "archive",
    "query_logs",
    "results",
    "data",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "ARG",   # flake8-unused-arguments
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "PTH",   # flake8-use-pathlib
    "RET",   # flake8-return
    "TRY",   # tryceratops
    "PLR",   # pylint refactor
    "PLW",   # pylint warnings
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without explicit strict parameter
    "TRY003", # avoid specifying long messages outside exception class
    "PLR0913", # too many arguments to function call
    "PLR2004", # magic value used in comparison
    "ARG001",  # unused function argument (common in callbacks)
    "ARG002",  # unused method argument
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"scripts/*" = ["T201"]     # Allow print statements in scripts
"rag_interactive.py" = ["T201"]  # Allow print in interactive CLI
"rag_web.py" = ["T201"]    # Allow print in web UI

[tool.ruff.lint.isort]
known-first-party = ["rag_low_level_m1_16gb_verbose"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.mccabe]
max-complexity = 15

# MyPy - Type Checking
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true for stricter typing
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "llama_index.*",
    "llama_cpp.*",
    "sentence_transformers.*",
    "streamlit.*",
    "plotly.*",
    "pgvector.*",
]
ignore_missing_imports = true

# Pytest - Testing
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=30",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gpu: marks tests that require GPU",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# Coverage
[tool.coverage.run]
source = ["."]
omit = [
    ".venv/*",
    "tests/*",           # Exclude all test files from coverage
    "test_*.py",         # Exclude test files anywhere
    "*/__pycache__/*",
    "archive/*",
    "scripts/*",
    "setup.py",
    "*/conftest.py",     # Exclude pytest fixtures
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2
show_missing = true
fail_under = 30.0  # Updated from 3% to 30% to match current coverage

# Bandit - Security Linting
[tool.bandit]
exclude_dirs = [
    ".venv",
    "tests",
    "archive",
    "scripts",
]
skips = [
    "B101",  # assert_used - common in tests
    "B601",  # paramiko_calls - not applicable
]

# Pyright (optional - for VS Code)
[tool.pyright]
include = ["."]
exclude = [
    "**/__pycache__",
    ".venv",
    "archive",
    "query_logs",
    "results",
    "data",
]
defineConstant = { DEBUG = true }
pythonVersion = "3.11"
pythonPlatform = "Darwin"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
